guitar-be-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: guitar-be
  labels:
    app: guitar-be
    type: back-end
spec:
  containers:
    - name: guitar-be
      image: dpcairns/guitar-be:latest
