guitar-sql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: guitar-postgres
  labels:
    run: guitar-postgres
spec:
  containers:
    - name: guitar-postgres
      image: postgres
