guitar-be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guitar-be-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
  selector:
    app: guitar-be
    type: back-end
