guitar-fe-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guitar-fr-deployment
spec:
  selector:
    matchLabels:
      app: guitar-fr
  template:
    metadata:
      labels:
        app: guitar-fr
    spec:
      containers:
        - name: guitar-front-end
          image: dpcairns/guitar-fe:v4
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: guitar-fr-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: guitar-fr
