guitar-fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guitar-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: guitar-fr
    type: front-end
